--- a/CS310H_HW1_BM_KR/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CS310H_HW1_BM_KR/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -210,24 +210,24 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/My_Blueprints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
-ContentBrowserDrawer.JumpMRU=/All/Game
+ContentBrowserDrawer.JumpMRU=/All
 ContentBrowserDrawer.JumpMRU=/All/Game/FirstPerson/Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game/FirstPerson
-ContentBrowserDrawer.JumpMRU=/All/Game/UI
+ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/My_Blueprints
+ContentBrowserDrawer.JumpMRU=/All/Game/UI
 ContentBrowserDrawer.JumpMRU=/All/Game/FPWeapon
 ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent
 ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent/Props
 ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent/Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game/FirstPersonArms
-ContentBrowserDrawer.JumpMRU=/All
 ContentBrowserDrawer.JumpMRU=/All/Game/My_Materials
 ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent/Architecture
 ContentBrowserDrawer.JumpMRU=/All/Game/FirstPerson/Maps
@@ -238,26 +238,27 @@ ToolbarOpenBPClass.CurrentViewType=0
 LastLevel=/Game/Level3
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -1142,6 +1143,62 @@ BP_FirstPersonProjectile_C.Events=True
 EdGraph.Graph=True
 EdGraph.Inputs=True
 EdGraph.Outputs=True
+ProgressBar.Layout=True
+ProgressBar.Style=True
+ProgressBar.Progress=True
+ProgressBar.Accessibility=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Render Transform=True
+ProgressBar.Performance=True
+ProgressBar.Rendering=True
+ProgressBar.Navigation=True
+ProgressBar.Localization=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.HLOD=True
+BoxComponent.ComponentTick=True
+BoxComponent.Rendering=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
+HealthPickup_C.Tick=True
+HealthPickup_C.Replication=True
+HealthPickup_C.Rendering=True
+HealthPickup_C.Collision=True
+HealthPickup_C.Actor=True
+HealthPickup_C.Input=True
+HealthPickup_C.HLOD=True
+HealthPickup_C.Physics=True
+HealthPickup_C.Events=True
+PrimitiveComponent.TransformCommon=True
+PrimitiveComponent.ComponentTick=True
+PrimitiveComponent.HLOD=True
+PrimitiveComponent.Rendering=True
+PrimitiveComponent.Physics=True
+PrimitiveComponent.Collision=True
+PrimitiveComponent.Navigation=True
+PrimitiveComponent.Tags=True
+PrimitiveComponent.ComponentReplication=True
+PrimitiveComponent.Variable=True
+PrimitiveComponent.Cooking=True
+PrimitiveComponent.Materials=True
+ActorComponent.ComponentTick=True
+ActorComponent.Tags=True
+ActorComponent.ComponentReplication=True
+ActorComponent.Variable=True
+ActorComponent.Cooking=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1167,7 +1224,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/bmatt/Documents/GitHub/FA24-MattesB-RamacK/CS310H_HW1_BM_KR/Content
+UNR=../../../../../../Users/ksram/Documents/GitHub/FA24-MattesB-RamacK/CS310H_HW1_BM_KR/Content
 BRUSH=../../../../../../Users/bmatt/Documents/GitHub/FA24-MattesB-RamacK/CS310H_HW1_BM_KR/Content/
 FBX=../../../../../../Users/bmatt/Documents/GitHub/FA24-MattesB-RamacK/CS310H_HW1_BM_KR/Content/
 FBXAnim=../../../../../../Users/bmatt/Documents/GitHub/FA24-MattesB-RamacK/CS310H_HW1_BM_KR/Content/
@@ -2331,31 +2388,32 @@ RecentlyPlaced=/Game/StarterContent/Blueprints/Blueprint_CeilingLight.Blueprint_
 RecentlyPlaced=/Game/StarterContent/Props/SM_Lamp_Wall.SM_Lamp_Wall;
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile
-MRUItem1=/Game/FirstPerson/Blueprints/BP_Pickup_Rifle
-MRUItem2=/Game/UI/UserInterface
+MRUItem0=/Game/Level3
+MRUItem1=/Game/My_Blueprints/HealthPickup
+MRUItem2=/Game/My_Blueprints/AmmoPickup
 MRUItem3=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem4=/Game/My_Blueprints/AmmoPickup
-MRUItem5=/Game/FirstPerson/Blueprints/BP_Weapon_Component
-MRUItem6=/Game/My_Blueprints/BP_target2
-MRUItem7=/Game/My_Blueprints/BP_target
-MRUItem8=/Game/StarterContent/Blueprints/Blueprint_CeilingLight
-MRUItem9=/Game/My_Blueprints/BP_Hazard5
-MRUItem10=/Game/My_Blueprints/BP_Hazard4
-MRUItem11=/Game/My_Blueprints/BP_hazard3
-MRUItem12=/Game/My_Blueprints/BP_hazard2
-MRUItem13=/Game/My_Blueprints/BP_Hazard1
-MRUItem14=/Game/Level2
-MRUItem15=/Game/Level3
-MRUItem16=/Game/Level1MainMenu
-MRUItem17=/Game/FPWeapon/Mesh/FirstPersonProjectileMesh
-MRUItem18=/Game/FPWeapon/Mesh/SK_FPGun_Skeleton
-MRUItem19=/Game/FPWeapon/Mesh/SK_FPGun
-MRUItem20=/Game/My_Materials/Target_Material
-MRUItem21=/Game/My_Materials/Target2_Material
-MRUItem22=/Game/StarterContent/Materials/M_Ground_Grass
-MRUItem23=/Game/UI/MainMenu
-MRUItem24=/Game/StarterContent/Architecture/Floor_400x400
+MRUItem4=/Game/My_Blueprints/BP_Hazard1
+MRUItem5=/Game/UI/UserInterface
+MRUItem6=/Game/Level2
+MRUItem7=/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile
+MRUItem8=/Game/FirstPerson/Blueprints/BP_Pickup_Rifle
+MRUItem9=/Game/FirstPerson/Blueprints/BP_Weapon_Component
+MRUItem10=/Game/My_Blueprints/BP_target2
+MRUItem11=/Game/My_Blueprints/BP_target
+MRUItem12=/Game/StarterContent/Blueprints/Blueprint_CeilingLight
+MRUItem13=/Game/My_Blueprints/BP_Hazard5
+MRUItem14=/Game/My_Blueprints/BP_Hazard4
+MRUItem15=/Game/My_Blueprints/BP_hazard3
+MRUItem16=/Game/My_Blueprints/BP_hazard2
+MRUItem17=/Game/Level1MainMenu
+MRUItem18=/Game/FPWeapon/Mesh/FirstPersonProjectileMesh
+MRUItem19=/Game/FPWeapon/Mesh/SK_FPGun_Skeleton
+MRUItem20=/Game/FPWeapon/Mesh/SK_FPGun
+MRUItem21=/Game/My_Materials/Target_Material
+MRUItem22=/Game/My_Materials/Target2_Material
+MRUItem23=/Game/StarterContent/Materials/M_Ground_Grass
+MRUItem24=/Game/UI/MainMenu
+MRUItem25=/Game/StarterContent/Architecture/Floor_400x400
 
 [AssetEditorToolkitTabLocation]
 /Game/StarterContent/Architecture/Floor_400x400.Floor_400x400=1
@@ -2383,6 +2441,7 @@ MRUItem24=/Game/StarterContent/Architecture/Floor_400x400
 /Game/My_Blueprints/BP_lightswitch.BP_lightswitch=1
 /Game/StarterContent/Blueprints/Blueprint_CeilingLight.Blueprint_CeilingLight=1
 /Game/FirstPerson/Blueprints/BP_FirstPersonProjectile.BP_FirstPersonProjectile=1
+/Game/My_Blueprints/HealthPickup.HealthPickup=1
 
 [WidgetTemplatesExpanded]
 Audio=False
@@ -2768,13 +2827,15 @@ Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
-Object=
+Object="\"Object.Collision.BodyInstance\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
-MeshComponent=
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
+MeshComponent="\"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" "
+SceneComponent="\"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object.Collision.BodyInstance\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[0]\" "
+BoxComponent="\"Object.Collision.BodyInstance\" "
+ShapeComponent="\"Object.Collision.BodyInstance\" "
 
 [/Script/Kismet.BlueprintPaletteFavorites]
 CustomFavorites=(FieldName="/Script/Engine.Actor:ReceiveBeginPlay",NodeName="/Script/BlueprintGraph.K2Node_Event")
