Added damage and colliders to hazard2 and hazard4

--- a/CS310H_HW1_BM_KR/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CS310H_HW1_BM_KR/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -210,17 +210,17 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/FirstPerson/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Game/My_Blueprints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
+ContentBrowserDrawer.JumpMRU=/All/Game/My_Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game/FirstPerson/Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game/FirstPerson
 ContentBrowserDrawer.JumpMRU=/All/Game
-ContentBrowserDrawer.JumpMRU=/All/Game/My_Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game/UI
 ContentBrowserDrawer.JumpMRU=/All
 ContentBrowserDrawer.JumpMRU=/All/Game/FPWeapon
@@ -235,11 +235,15 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Level2
+LastLevel=/Game/Level1MainMenu
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -252,6 +256,7 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -261,15 +266,6 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-OpenAssetsAtExit=/Game/My_Blueprints/BP_target2.BP_target2
-OpenAssetsAtExit=/Game/My_Blueprints/BP_target.BP_target
-OpenAssetsAtExit=/Game/UI/UserInterface.UserInterface
-OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2396,23 +2392,23 @@ RecentlyPlaced=/Game/StarterContent/Blueprints/Blueprint_CeilingLight.Blueprint_
 RecentlyPlaced=/Game/StarterContent/Props/SM_Lamp_Wall.SM_Lamp_Wall;
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem1=/Game/My_Blueprints/BP_target2
-MRUItem2=/Game/My_Blueprints/BP_target
-MRUItem3=/Game/UI/UserInterface
-MRUItem4=/Game/Level3
-MRUItem5=/Game/My_Blueprints/HealthPickup
-MRUItem6=/Game/My_Blueprints/AmmoPickup
-MRUItem7=/Game/My_Blueprints/BP_Hazard1
-MRUItem8=/Game/Level2
-MRUItem9=/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile
-MRUItem10=/Game/FirstPerson/Blueprints/BP_Pickup_Rifle
-MRUItem11=/Game/FirstPerson/Blueprints/BP_Weapon_Component
-MRUItem12=/Game/StarterContent/Blueprints/Blueprint_CeilingLight
-MRUItem13=/Game/My_Blueprints/BP_Hazard5
-MRUItem14=/Game/My_Blueprints/BP_Hazard4
-MRUItem15=/Game/My_Blueprints/BP_hazard3
-MRUItem16=/Game/My_Blueprints/BP_hazard2
+MRUItem0=/Game/My_Blueprints/BP_hazard3
+MRUItem1=/Game/My_Blueprints/BP_Hazard5
+MRUItem2=/Game/My_Blueprints/BP_hazard2
+MRUItem3=/Game/My_Blueprints/BP_Hazard4
+MRUItem4=/Game/My_Blueprints/BP_Hazard1
+MRUItem5=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem6=/Game/My_Blueprints/BP_target2
+MRUItem7=/Game/My_Blueprints/BP_target
+MRUItem8=/Game/UI/UserInterface
+MRUItem9=/Game/Level3
+MRUItem10=/Game/My_Blueprints/HealthPickup
+MRUItem11=/Game/My_Blueprints/AmmoPickup
+MRUItem12=/Game/Level2
+MRUItem13=/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile
+MRUItem14=/Game/FirstPerson/Blueprints/BP_Pickup_Rifle
+MRUItem15=/Game/FirstPerson/Blueprints/BP_Weapon_Component
+MRUItem16=/Game/StarterContent/Blueprints/Blueprint_CeilingLight
 MRUItem17=/Game/Level1MainMenu
 MRUItem18=/Game/FPWeapon/Mesh/FirstPersonProjectileMesh
 MRUItem19=/Game/FPWeapon/Mesh/SK_FPGun_Skeleton
@@ -2576,8 +2572,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -2835,12 +2831,12 @@ Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
-Object=
+Object="\"Object.Collision.BodyInstance\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
-MeshComponent=
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
+MeshComponent="\"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" "
+SceneComponent="\"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object.Collision.BodyInstance\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[0]\" "
 BoxComponent="\"Object.Collision.BodyInstance\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" "
