added colliders and damage to hazards 2 and 4

--- a/CS310H_HW1_BM_KR/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CS310H_HW1_BM_KR/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -210,17 +210,17 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/My_Blueprints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
+ContentBrowserDrawer.JumpMRU=/All/Game/My_Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/LevelPrototyping
 ContentBrowserDrawer.JumpMRU=/All/Game/UI
-ContentBrowserDrawer.JumpMRU=/All/Game/My_Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game/FirstPerson/Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game/FirstPerson
 ContentBrowserDrawer.JumpMRU=/All
@@ -241,6 +241,9 @@ LastLevel=/Game/Level1MainMenu
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -252,7 +255,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -268,14 +270,6 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
-OpenAssetsAtExit=/Game/My_Blueprints/BP_Hazard1.BP_Hazard1
-OpenAssetsAtExit=/Game/UI/NextLevel.NextLevel
-OpenAssetsAtExit=/Game/UI/WinMenu.WinMenu
-OpenAssetsAtExit=/Game/My_Blueprints/BP_target.BP_target
-OpenAssetsAtExit=/Game/My_Blueprints/BP_target2.BP_target2
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1267,7 +1261,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/bmatt/Documents/GitHub/FA24-MattesB-RamacK/CS310H_HW1_BM_KR/Content
+UNR=../../../../../../Users/ksram/Documents/GitHub/FA24-MattesB-RamacK/CS310H_HW1_BM_KR/Content
 BRUSH=../../../../../../Users/bmatt/Documents/GitHub/FA24-MattesB-RamacK/CS310H_HW1_BM_KR/Content/
 FBX=../../../../../../Users/bmatt/Documents/GitHub/FA24-MattesB-RamacK/CS310H_HW1_BM_KR/Content/
 FBXAnim=../../../../../../Users/bmatt/Documents/GitHub/FA24-MattesB-RamacK/CS310H_HW1_BM_KR/Content/
@@ -2431,27 +2425,27 @@ RecentlyPlaced=/Game/StarterContent/Blueprints/Blueprint_CeilingLight.Blueprint_
 RecentlyPlaced=/Game/StarterContent/Props/SM_Lamp_Wall.SM_Lamp_Wall;
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UI/NextLevel
-MRUItem1=/Game/My_Blueprints/BP_target2
-MRUItem2=/Game/UI/UserInterface
-MRUItem3=/Game/UI/MainMenu
-MRUItem4=/Game/My_Blueprints/BP_target
-MRUItem5=/Game/UI/WinMenu
-MRUItem6=/Game/UI/LoseMenu
-MRUItem7=/Game/My_Blueprints/BP_Hazard1
-MRUItem8=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem9=/Game/Level3
-MRUItem10=/Game/My_Blueprints/HealthPickup
-MRUItem11=/Game/My_Blueprints/AmmoPickup
-MRUItem12=/Game/Level2
-MRUItem13=/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile
-MRUItem14=/Game/FirstPerson/Blueprints/BP_Pickup_Rifle
-MRUItem15=/Game/FirstPerson/Blueprints/BP_Weapon_Component
-MRUItem16=/Game/StarterContent/Blueprints/Blueprint_CeilingLight
-MRUItem17=/Game/My_Blueprints/BP_Hazard5
-MRUItem18=/Game/My_Blueprints/BP_Hazard4
-MRUItem19=/Game/My_Blueprints/BP_hazard3
-MRUItem20=/Game/My_Blueprints/BP_hazard2
+MRUItem0=/Game/My_Blueprints/BP_Hazard1
+MRUItem1=/Game/My_Blueprints/BP_Hazard4
+MRUItem2=/Game/My_Blueprints/BP_hazard3
+MRUItem3=/Game/My_Blueprints/BP_hazard2
+MRUItem4=/Game/UI/NextLevel
+MRUItem5=/Game/My_Blueprints/BP_target2
+MRUItem6=/Game/UI/UserInterface
+MRUItem7=/Game/UI/MainMenu
+MRUItem8=/Game/My_Blueprints/BP_target
+MRUItem9=/Game/UI/WinMenu
+MRUItem10=/Game/UI/LoseMenu
+MRUItem11=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem12=/Game/Level3
+MRUItem13=/Game/My_Blueprints/HealthPickup
+MRUItem14=/Game/My_Blueprints/AmmoPickup
+MRUItem15=/Game/Level2
+MRUItem16=/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile
+MRUItem17=/Game/FirstPerson/Blueprints/BP_Pickup_Rifle
+MRUItem18=/Game/FirstPerson/Blueprints/BP_Weapon_Component
+MRUItem19=/Game/StarterContent/Blueprints/Blueprint_CeilingLight
+MRUItem20=/Game/My_Blueprints/BP_Hazard5
 MRUItem21=/Game/Level1MainMenu
 MRUItem22=/Game/FPWeapon/Mesh/FirstPersonProjectileMesh
 MRUItem23=/Game/FPWeapon/Mesh/SK_FPGun_Skeleton
@@ -2876,12 +2870,12 @@ Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
-Object=
+Object="\"Object.Collision.BodyInstance\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
 MeshComponent=
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
+PrimitiveComponent="\"Object.Collision.BodyInstance\" "
+SceneComponent="\"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object.Collision.BodyInstance\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[0]\" "
 BoxComponent="\"Object.Collision.BodyInstance\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" "
